# selenography

./: README.md  pyproject.toml
src/selenography/: __init__.py  adjust_to_WAC.py  align_pixels.py  apply_gcps.py  crop_with_bbox.py  image_conversion.py  lunar_regional_bounding_boxes.py
src/selenography.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/selenography/projections/: __init__.py  equidistant_cylindrical_moon.py  gcs_moon_2000.py
src/selenography/utils/: __init__.py  normalize_image.py
